tests/should_succeed/clones/01.coma
module M_func1
  use creusot.prelude.Any
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let func1 (return (x: ())) = (! bb0
    [ bb0 = return {_ret} ] [ & _ret: () = Any.any_l () ]) [ return (result: ()) -> (! return {result}) ]
end
module M_func2
  use creusot.prelude.Any
  
  let func1 (return (x: ())) = any [ return (result: ()) -> (! return {result}) ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let func2 (return (x: ())) = (! bb0
    [ bb0 = s0 [ s0 = func1 (fun (_x: ()) -> [ &_ret <- _x ] s1) | s1 = return {_ret} ] ] [ & _ret: () = Any.any_l () ])
    [ return (result: ()) -> (! return {result}) ]
end
module M_func3
  use creusot.prelude.Any
  
  let func2 (return (x: ())) = any [ return (result: ()) -> (! return {result}) ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let func3 (return (x: ())) = (! bb0
    [ bb0 = s0 [ s0 = func2 (fun (_x: ()) -> [ &_ret <- _x ] s1) | s1 = return {_ret} ] ] [ & _ret: () = Any.any_l () ])
    [ return (result: ()) -> (! return {result}) ]
end
