tests/should_fail/bug/int-shift-full.coma
module M_shr_full
  use creusot.int.Int32
  use creusot.int.UInt8
  use creusot.prelude.Any
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let shr_full (return (x: UInt8.t)) = (! bb0
    [ bb0 = s0
      [ s0 = UInt8.shr {(1: UInt8.t)} {Int32.to_int (8: Int32.t)} (fun (_x: UInt8.t) -> [ &_ret <- _x ] s1)
      | s1 = return {_ret} ] ] [ & _ret: UInt8.t = Any.any_l () ]) [ return (result: UInt8.t) -> (! return {result}) ]
end
